discussion/kv_engine/174391/174391_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-51914: Set a max limit on #connections to a bucket

Only allow external clients to select a bucket if the total
number of connections bound to the limit is lower than 600.

Change-Id: Ife4a37bd2e34f7a8e0574145730797a068539ece

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-05-02 12:54:28.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-05-02 12:57:08.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17222/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/mcbp/select_bucket_executor.cc:55:13: error: use of undeclared identifier "isServerlessDeployment" [clang-diagnostic-error]
        if (isServerlessDeployment() && !connection.isInternal()) {
            ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17222/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/mcbp/select_bucket_executor.cc:55:13:
error: use of undeclared identifier "isServerlessDeployment" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17222/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/16184/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2022-05-02 13:50:08.000000000
Message: 
Set Ready For Review
----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2022-05-02 14:06:42.000000000
Message: 
Removed Verified-1 by <GERRIT_ACCOUNT_1000011>

----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2022-05-02 14:07:00.000000000
Message: 
Removed Code-Review-1 by <GERRIT_ACCOUNT_1000011>

----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-05-02 14:14:05.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6836/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6836/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18978/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18978/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27383/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27383/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18143/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18143/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6928/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6928/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20007/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20007/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45847/ : FAILURE

Failure of GoogleTest "ServerlessTest.MaxConnectionPerBucket":

<pre>
[ RUN      ] ServerlessTest.MaxConnectionPerBucket
C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/tests/testapp_serverless/serverless_test.cc(116): error: Expected: (num_clients) <= (16), actual: 17 vs 16
[  FAILED  ] ServerlessTest.MaxConnectionPerBucket (54 ms)
ServerlessTest.MaxConnectionPerBucket
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45847/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19316/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19316/ )
----------------------------------------------------------------------------------------------------------------------
